[package]
name = "server1"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "server1"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json"] }
